# rubiks-cube-solver

./: G0  G0.tab  G0.table  G0.txt  G2  G2.tab  README.md  go.mod  go.sum  main.go  utils.go
GUI/: CMakeLists.txt  RubikGUIConfig.hpp.in
GUI/include/: RubikGUIConfig.h
GUI/src/: main.cpp
algorithm/: algorithm.go  database.go  dijkstra.go  file.go  idastar.go  tables.go
assets/: G0.table  G2.table
cube/: README.md  cube.go  groups.go  notation.go  print.go  rotation.go  rotations.go
database/: file.go  generator.go
graph/: graph.go
model/: cube.go  groups.go  rotations.go
render/: render.go
solver/: generator.go  groups.go  indices.go  model.go  rotations.go  solver.go  utils.go
